Entwicklungkapitel aufgenommen, Security Doku angepasst.

--- a/ITProjekt/src/inhalt.tex
+++ b/ITProjekt/src/inhalt.tex
@@ -116,19 +116,19 @@ Die Kleidungsarten und die dazugehörigen Größen können in der Administration
 Im Abschnitt der \textit{\textbf{Auswertungen}} können die Anwender*innen eine Bericht erstellen, der Auskunft über die ausgegebenen, zurückgenommenen und ausgesonderten Kleidungsstücke gibt. Dabei kann in einem Filter der Zeitraum, die Kleidungsart, Größe, Transaktionsart, der Ortsteil (wie auch der lokale Warenbestand) gesetzt werden, wodurch der Bericht auf spezielle Bedürfnisse angepasst werden kann. Der Bericht soll als Excel"=Tabelle oder PDF erfolgen.
 
 \subsection{Projektplan}
-\subsubsection{Work-Breakdown-Structure}\label{sec:wbs}
+\subsubsection{Roadmap}\label{sec:roadmap}
 
-Wir unterteilen den Projektablauf in vier Phasen die in den jeweiligen Semestern abgehandelt werden sollen. In Phase 1, die von August bis September 2018 gehen soll, treten wir in Kontakt mit den Verantwortlichen der freiwilligen Feuerwehr Eschenstruth und stellen ihnen die ersten Entwürfe der UI und unseres Konzeptes vor.
+Wir unterteilen den Projektablauf in vier Phasen die in den jeweiligen Semestern abgehandelt werden sollen. In \textit{\textbf{Phase 1}}, die von August bis September 2018 gehen soll, treten wir in Kontakt mit den Verantwortlichen der freiwilligen Feuerwehr Eschenstruth und stellen ihnen die ersten Entwürfe der UI und unseres Konzeptes vor.
 Zusätzlich wollen wir in dieser Phase die Infrastruktur, sowie die Software- und Rest-Architektur planen und erstellen. Wir werden außerdem eine Umgebung für unserer Entwicklung finden und die Projekt Repositories erstellen und pflegen.
 Als letztes wollen wir ein Projektdefinitionsdokument sowie einen Projektplan erstellen.
 
-In der zweiten Phase von Februar bis März 2019 werden wir für unsere Entwicklungen eine \textit{Defintion of Done} (\textit{DOD}), also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden \textit{Sprints }genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (\textit{Daily}) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines \textit{Sprints} werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden \textit{Sprint} aufnehmen, in die Entwicklung einplanen und umsetzen. 
+In \textit{\textbf{Phase 2}} von Februar bis März 2019 werden wir für unsere Entwicklungen eine \textit{Defintion of Done} (\textit{DOD}), also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden \textit{Sprints }genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (\textit{Daily}) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines \textit{Sprints} werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden \textit{Sprint} aufnehmen, in die Entwicklung einplanen und umsetzen. 
 
 Währenddessen werden wir immer wieder unsere Arbeit dokumentieren, damit wir nicht am Ende eine große Dokumentationsphase einleiten müssen. Wir werden außerdem unsere Komponenten mit automatisierten Tests versehen.
 
-Die dritte Phase von August bis September 2019 wird genauso ablaufen, wie die Zweite.
+Die \textit{\textbf{Phase 3}} von August bis September 2019 wird genauso ablaufen, wie die Zweite.
 
-In der letzten Phase von Februar bis März 2020 werden wir dann das Projekt schließlich abschließen.  
+In der letzten \textit{\textbf{Phase 4}} von Februar bis März 2020 werden wir dann das Projekt letzendlich abschließen.  
 
 \subsubsection{Ressourcenplanung}
 
