Zeitplanung aufgenommen. Produkt Titel festgelegt. Rechtschreibfehler korrigiert.

--- a/ITProjekt/hausarbeit.tex
+++ b/ITProjekt/hausarbeit.tex
@@ -40,8 +40,8 @@
 \listoffigures
 \addcontentsline{toc}{section}{\listfigurename}
 
-%\listoftables
-%\addcontentsline{toc}{section}{Tabellenverzeichnis}
+\listoftables
+\addcontentsline{toc}{section}{Tabellenverzeichnis}
 
 %\lstlistoflistings
 %\addcontentsline{toc}{section}{Listings}
