--- a/ITProjekt/src/konfiguration.tex
+++ b/ITProjekt/src/konfiguration.tex
@@ -28,7 +28,7 @@
 %\newcommand{\matrikelnummer}{541608\xspace}
 
 % Arbeitsspezifische Daten
-\newcommand{\project}{\textbf{WBS ALARM!} (\textit{Arbeitstitel})}
+\newcommand{\project}{\textit{WBS Kleiderkammer}\xspace}
 \newcommand{\titel}{\project\xspace}
 \newcommand{\untertitel}{IT-Projekt im Rahmen des Studiengangs\xspace}
 \newcommand{\modulname}{IT-Projekt\xspace}
