--- a/ITProjekt/src/sec/entwicklung.tex
+++ b/ITProjekt/src/sec/entwicklung.tex
@@ -1,6 +1,6 @@
 \section{Entwicklung}\label{sec:Entwicklung}
 
-\project Wird ein Open Source Projekt. Diese Entscheidung wurde gemeintschaftlich getroffen und entsprechende \textit{GitHub} Repositories wurden dafür erstellt. Die aktuelle Dokumentation ist unter folgender URL zu finden: \url{https://github.com/argh87/de.hs-hulda.et.it.project}.
+\project wird ein Open Source Projekt. Diese Entscheidung wurde gemeintschaftlich getroffen und entsprechende \textit{GitHub} Repositories wurden dafür erstellt. Die aktuelle Dokumentation ist unter folgender URL zu finden: \url{https://github.com/argh87/de.hs-hulda.et.it.project}.
 
 \subsection{Entwicklungsumgebung}\label{sec:Umgebung}
 
@@ -8,7 +8,7 @@ Für die Entwicklung wird im Backend \textit{Spring Boot} verwendet Es werden \t
 
 Das Frontend wird mit \textit{Angular} umgesetzt. Hierbei werden die \textit{REST Services} vom Backend angesprochen und an der Oberfläche für den \textit{User} leicht bedienbar gemacht.
 
-Das Repository befindet sich in folgenden Repositories:
+Das Repository befindet sich unter folgenden URL:
 
 \begin{itemize}
 \item Frontend: \url{https://github.com/WiederT/clothes_management_frontend}
