--- a/ITProjekt/src/titelseite.tex
+++ b/ITProjekt/src/titelseite.tex
@@ -20,7 +20,7 @@
     {\Large \itshape \untertitel \par}
     \vspace{2.5cm}
 
-    Projektinitialisierung\\ 
+    Aktueller Stand Teil I\\
     %Schriftliche Prüfungsleistung\\ im Modul
     \modulname\\
     im Studiengang\\ Bachelor of Science: Sozialinformatik \\
