--- a/ITProjekt/src/sec/initialisierung.tex
+++ b/ITProjekt/src/sec/initialisierung.tex
@@ -7,7 +7,7 @@ Wir sind ein junges Unternehmen bestehend aus drei Studenten der Sozialinformati
 
 \subsection{Projekt}
 
-Die freiwillige Feuerwehr von Eschenstruth gibt Feuerwehrkleidung für anliegende Ortsteile an Kinder aus. Dies gestaltet sich zunehmend schwerer, da die aktuelle Bestandspflege und der Überblick über die ausgegebene Kleidung mit den aktuellen Methoden schwer fällt. Vor wenigen Jahren wurden die Ausgabe und Verwaltung der Kleidung noch mit Zetteln dokumentiert. Dabei kam es durch uneinheitliches Vorgehen zu Verlust von Informationen. Dies geschah \zb durch den Verlust eines Zettels. Ein Zettel konnte schnell geschrieben, musste aber auch ordentlich in die entsprechende Akte eingepflegt werden. Zudem musste der Ort der Akte erst aufgesucht werden um das Schriftstück abzuheften.
+Die freiwillige Feuerwehr von Eschenstruth verwaltet die Feuerwehrkleidung für den eigenen, sowie die anliegenden Ortsteile Helsas. Dies gestaltet sich zunehmend schwerer, da die aktuelle Bestandspflege und der Überblick über die ausgegebene Kleidung mit den aktuellen Methoden sehr fehleranfällig und unübersichtlich ist. Vor wenigen Jahren wurden die Ausgabe und Verwaltung der Kleidung noch mit Zetteln dokumentiert. Dabei kam es durch uneinheitliches Vorgehen zu Verlust von Informationen. Dies geschah \zb durch den Verlust eines Zettels. Ein Zettel konnte schnell geschrieben, musste aber auch ordentlich in die entsprechende Akte eingepflegt werden. Zudem musste der Ort der Akte erst aufgesucht werden um das Schriftstück abzuheften.
 Aktuell wird eine Excel"=Tabelle gepflegt. Diese befindet sich auf einem lokalen Rechner und einem USB"=Stick zur Datensicherung. Hier besteht der Nachteil, dass ein Rechner, auf dem sich de Excel"=Tabelle befindet, aufgesucht werden muss, um den Kleidereingang oder "=ausgang aus dem Lager zu dokumentieren. Als Zwischenspeicher wird eine Tafel verwendet, die bei der Ausgabe oder Annahme von Kleidung gefüllt wird (s. Abbildung~\ref{fig:tafel}). Der Warenbestand kann dann von einem beliebigen Rechner aus übertragen und dokumentiert werden, unter der Voraussetzung, dass die Person die aktuelle Excel"=Tabelle besitzt. Es muss aber bei der Synchronisation der Dokumentation darauf geachtet werden, dass die Daten in chronologisch richtiger Reihenfolge aufbereitet werden. Das kann unter Umständen, wenn zwei Personen zur gleichen Zeit an der Tabelle gearbeitet haben, zu einem erheblichen Mehraufwand führen, wenn nicht direkt nachvollziehbar ist, wer als letztes die Tabelle gepflegt hat, oder auf welchen Stand sich die Excel"=Tabelle befindet. 
 
 \begin{figure}[hbtp]
@@ -25,15 +25,15 @@ In den folgenden Kapiteln werden die Kernziele dieses Projekts erläutert und di
 
 \subsubsection{Gegenstand, Kernziele und Ziele des Projektes}
 
-Unsere Kernziele sind das Schaffen einer Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa. Diese werden aktuell im Ortsteil Eschenstruth gelagert und rudimentär verwaltet. Dafür soll eine Web"=Applikation erstellt werden, die den Bestand dokumentiert, die Auf"= und Abgabe von Kleidung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth ermöglicht. 
+Unsere Kernziele sind das Schaffen einer Übersicht über die Bestände der Kleidung der Jugendfeuerwehren der Gemeinde Helsa. Diese werden aktuell im Ortsteil Eschenstruth gelagert und rudimentär verwaltet. Dafür soll eine Web"=Applikation erstellt werden, die den Bestand dokumentiert, sowie die Aus"= und Abgabe von Kleidung der freiwilligen Feuerwehr Helsa Ortsteil Eschenstruth ermöglicht. 
 
 Das Projekt soll möglichst barrierefrei (nach aktuellstem europäischem Standard), sowie mobil bedienbar sein, sodass die Jugendwarte nicht auf einen zusätzlichen Laptop angewiesen sind, sondern das Programm einfach und bequem von ihrem Laptop oder Smartphone aus bedienen können. Es soll außerdem unter Verwendung der aktuellsten technischen Standards umgesetzt werden.
 
-Ziel ist es eine vollständig nachvollziehbare Dokumentation zu ermöglichen, bei dem zu jederzeit der aktuelle Aufenthaltsort der zur Verfügung stehenden Kleidung ermittelt werden kann. Dabei soll ein paralleles Arbeiten möglich sein. 
+Ziel ist es eine vollständig nachvollziehbare Dokumentation zu ermöglichen, bei der zu jederzeit der aktuelle Aufenthaltsort der zur Verfügung stehenden Kleidung ermittelt werden kann. Dabei soll ein paralleles Arbeiten möglich sein. 
 
 \subsubsection{Erfolgskriterien}
 
-Wir sind sehr darauf bedacht, dass unsere Anwendung performant läuft und jederzeit erreichbar ist. Hierfür ist uns eine gute Server-Infrastruktur wichtig. Dass unsere Applikation performant ist, ist uns wichtig, da es die Akzeptanz unserer Anwender steigern wird, wenn sie nicht lange auf einen Seitenaufbau oder auf das Ausführen einer Aktion warten müssen. 
+Wir sind sehr darauf bedacht, eine performante und jederzeit erreichbare Applikation zu entwickeln. Ein schneller Seitenaufbau und kurze Wartezeiten sind serhr wichtig , da sie die Akzeptanz der Anwender steigern werden. Hierfür ist uns eine gute Server-Infrastruktur wichtig.
 
 Wir legen außerdem gesteigerten Wert darauf, dass die Anwendung mobil nutzbar sein wird. Das soll zum einen ebenfalls die Akzeptanz der Anwender steigern und zum anderen das Anschaffen neuer Hardware verhindern.
 
@@ -49,7 +49,7 @@ Das Projekt soll für einen öffentlichen, sozialen Träger umgesetzt werden: Di
 
 Dadurch, dass das Projekt"=Team Vollzeit tätig ist, kann es zu Engpässen in der Durchführung kommen. Dies kann unter Umständen zu Mehrarbeit auf einzelne Team"=Mitglieder führen. Das Risiko ist gering einzuschätzen, da das Projekt"=Team  hinter der Idee steht.
 
-Ein weiteres Risiko betrifft die Evaluation einer kostenlosen, bis kostengünstigen, Plattform, auf der die Anwendung bereit gestellt werden kann. Dabei kann die Akzeptanz der Endkunden sinken, wenn die Betriebskosten zu hoch ausfallen. Ab welchen Betrag die Kosten zu hoch sind, ist noch zu klären. Dieses Risiko ist mittelmäßig einzuschätzen, da es am Markt diverse Anbieter gibt. Unter den bekannteren Anbietern gehören \textit{AWS}, von \textit{Amazon}, und \textit{Heroku}.
+Ein weiteres Risiko betrifft die Evaluation einer kostenlosen, bis kostengünstigen, Plattform, auf der die Anwendung bereit gestellt werden kann. Dabei kann die Akzeptanz der Endkunden sinken, wenn die Betriebskosten zu hoch ausfallen. Ab welchen Betrag die Kosten zu hoch sind, ist noch zu klären. Dieses Risiko ist mittelmäßig einzuschätzen, da es am Markt diverse Anbieter gibt. Unter den bekannteren Anbietern gehören \textit{AWS}, von \textit{Amazon}, sowie \textit{Heroku}.
 
 \subsubsection{Am Projekt Beteiligte}\label{sec:beteiligte}
 
