--- a/ITProjekt/src/sec/projektplanung.tex
+++ b/ITProjekt/src/sec/projektplanung.tex
@@ -42,42 +42,42 @@ Wir unterteilen den Projektablauf in vier Phasen die in den jeweiligen Semestern
 Zusätzlich wollen wir in dieser Phase die Infrastruktur, sowie die Software- und REST-Architektur planen und erstellen. Wir werden außerdem eine Umgebung für unserer Entwicklung finden und die Projekt Repositories erstellen und pflegen.
 Als letztes wollen wir ein Projektdefinitionsdokument sowie einen Projektplan erstellen.
 
-In \textit{\textbf{Phase 2}} von Februar bis März 2019 werden wir für unsere Entwicklungen eine \textit{Defintion of Done} (\textit{DOD}), also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden \textit{Sprints }genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (\textit{Daily}) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines \textit{Sprints} werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden \textit{Sprint} aufnehmen, in die Entwicklung einplanen und umsetzen. 
+In \textit{\textbf{Phase 2}} von Februar bis März 2019 werden wir für unsere Entwicklungen eine \textit{Definition of Done} (\textit{DOD}), also eine Vereinbarung darüber erstellen, wann wir ein Feature für fertig erachten. Danach beginnen wir mit Entwicklungsintervallen (im Folgenden \textit{Sprints }genannt) die jeweils eine Woche lang sein werden. An jedem Tag dieser Intervalle werden wir abends ein Meeting (\textit{Daily}) abhalten, bei dem wir uns auf den aktuellen Stand bringen, was die Entwicklung angeht. Am Ende eines \textit{Sprints} werden wir uns die aktuellen Ergebnisse präsentieren und dazu auch die Stakeholder (Verantwortliche der freiwilligen Feuerwehr) einladen. Die Anmerkungen aus diesen Meetings werden wir jeweils in den folgenden \textit{Sprint} aufnehmen, in die Entwicklung einplanen und umsetzen. 
 
 Währenddessen werden wir immer wieder unsere Arbeit dokumentieren, damit wir nicht am Ende eine große Dokumentationsphase einleiten müssen. Wir werden außerdem unsere Komponenten mit automatisierten Tests versehen.
 
 Die \textit{\textbf{Phase 3}} von August bis September 2019 wird genauso ablaufen, wie die Zweite.
 
-In der letzten \textit{\textbf{Phase 4}} von Februar bis März 2020 werden wir dann das Projekt letzendlich abschließen.  
+In der letzten \textit{\textbf{Phase 4}} von Februar bis März 2020 werden wir dann das Projekt letztendlich abschließen.  
 
 \subsubsection{Zeitplanung}
 
 In Tabelle~\ref{tab:zeitplanung} sind die geplanten Vorgänge über die Laufzeit des IT"=Projekts von Teil I bis IV aufgelistet. Durch die lange Laufzeit über vier Semester haben wir uns gegen eine grafische Darstellung entschieden. Diese würde zu unübersichtlich werden und brächte keinen Mehrwert.
 
 \begin{table}[htp]
-  \caption{Zeitplnung der einzelnen Vorgänge über das IT"=Projekt Teil I bis IV.}
+  \caption{Zeitplanung der einzelnen Vorgänge über das IT"=Projekt Teil I bis IV.}
   \bgroup
   \def\arraystretch{1.5}%
   \begin{tabular}{|l|r|r|}
     \hline
     \textbf{Vorgang}                                              & \textbf{Anfang}   & \textbf{Ende} \\ \hline
-    \textbf{Projektinitialisierung (IT-Projekt I - 4. Semster)}   & \textbf{01.08.18} & \textbf{30.09.18} \\ \hline
+    \textbf{Projektinitialisierung (IT-Projekt I - 4. Semester)}   & \textbf{01.08.18} & \textbf{30.09.18} \\ \hline
     Kontaktanbahnung soziales Handlungsumfeld                     & 01.08.18          & 14.08.18 \\ \hline
     Bedarfsabklärung                                              & 15.08.18          & 29.08.18 \\ \hline
     Definition der Ziele des Projekts                             & 30.08.18          & 13.09.18 \\ \hline
     Erstellen der Repositories                                    & 14.09.18          & 18.09.18 \\ \hline
     Dokumentation der 1. Projektphase                             & 01.08.18          & 30.09.18 \\ \hline
-    \textbf{Entwicklung (IT-Projekt II - 5. Semster)}             & \textbf{01.02.19} & \textbf{31.03.19} \\ \hline
+    \textbf{Entwicklung (IT-Projekt II - 5. Semester)}             & \textbf{01.02.19} & \textbf{31.03.19} \\ \hline
     Evaluierung geeigneter Werkzeuge                              & & \\ 
     (Programmiersprache/DB/Cloud)                                 & 01.02.19          & 15.02.19 \\ \hline
     Entwicklung von Frontend/Backend/Infrastruktur                & 16.02.19          & 23.03.19 \\ \hline
     Testen des bisherigen Entwicklungsstands                      & 23.02.19          & 31.03.19 \\ \hline
     Dokumentation der 2. Phase                                    & 01.02.19          & 31.03.19 \\ \hline
-    \textbf{Entwicklung (IT-Projekt III - 6. Semster)}            & \textbf{01.08.19} & \textbf{30.09.19} \\ \hline
+    \textbf{Entwicklung (IT-Projekt III - 6. Semester)}            & \textbf{01.08.19} & \textbf{30.09.19} \\ \hline
     Entwicklung von Frontend/Backend/Infrastruktur                & 01.08.19          & 30.09.19 \\ \hline
     Testen des bisherigen Entwicklungsstands                      & 08.08.19          & 30.09.19 \\ \hline
     Dokumentation der 3. Phase                                    & 01.08.19          & 30.09.19 \\ \hline
-    \textbf{Entwicklung / Abschluss (IT-Projekt IV - 7. Semster)} & \textbf{01.02.20} & \textbf{31.03.20} \\ \hline
+    \textbf{Entwicklung / Abschluss (IT-Projekt IV - 7. Semester)} & \textbf{01.02.20} & \textbf{31.03.20} \\ \hline
     Entwicklung von Frontend/Backend/Infrastruktur                & 01.02.20          & 03.03.20 \\ \hline
     Erstellen der Abschlussdokumentation                          & 01.02.20          & 04.03.20 \\ \hline
     Erstellen der Kundendokumentation                             & 05.03.20          & 17.03.20 \\ \hline
