- added login ui (unstyled)
login ui hinzugefügt und darauf weitergeleitet

--- a/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
+++ b/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
@@ -6,5 +6,11 @@
 	"example": "Beispiel",
 	"search": "Suchen",
 	"noResult": "Keine Ergebnisse",
-	"test": "Das ist nur ein Test"
+	"test": "Das ist nur ein Test",
+
+	"login": {
+		"username": "Benutzername",
+		"password": "Passwort",
+		"language": "Sprache"
+	}
 }
