added system component

--- a/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
+++ b/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
@@ -12,5 +12,18 @@
 		"username": "Benutzername",
 		"password": "Passwort",
 		"language": "Sprache"
+	},
+	"booking": {
+		"booking": "Buchung",
+		"bookNow": "Jetzt buchen",
+		"clothesType": "Art der Kleidung",
+		"quantity": "Menge",
+		"size": "Größe"
+	},
+	"system":
+	{
+		"system": "System",
+		"addUser": "Benutzer anlegen",
+		"editUser": "Benutzer bearbeiten"
 	}
 }
