- added method to create new carrier and styled the menu

--- a/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
+++ b/wbs-alarm/wbs-frontend/src/app/assets/lang/locale-de.json
@@ -36,10 +36,10 @@
 			"removeClothes": "Kleidungsart löschen"
 		},
 		"village": {
-			"village": "Ortsteilverwaltung",
-			"addVillage": "Ortsteil anlegen",
-			"editVillage": "Ortsteil bearbeiten",
-			"removeVillage": "Ortsteil löschen"
+			"village": "Trägerverwaltung",
+			"addVillage": "Träger anlegen",
+			"editVillage": "Träger bearbeiten",
+			"removeVillage": "Träger löschen"
 		}
 	}
 }
